--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,15 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+  # toast组件 PLATFORM ANDROID IOS WEB
+  fluttertoast: ^8.1.2
+  # sp存储组件
+  shared_preferences: ^2.0.15
+  # 状态管理、路由管理
+  get: ^4.6.5
+  # event_bus 事件传递
+  event_bus: ^2.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -57,6 +66,10 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+    - assets/material.png
+    - assets/audios/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
